@@ -50,7 +50,7 @@
      <then>
        <exec executable="src/mytester" logoutput="true" passthru="true" checkreturn="true">
          <arg value="--colors"/>
-         <arg value="--resultsFormat"/>
+         <arg value="--results"/>
          <arg value="junit"/>
          <arg value="--noPhpt"/>
        </exec>
